# CodeCoach

./: .editorconfig  .gitignore  README.md  package-lock.json  start_codecoach.bat
services/analyzer/: CMakeLists.txt
services/analyzer/src/: main.cpp
services/evaluator/: CMakeLists.txt
services/evaluator/src/: main.cpp
services/microservices/: .env  llm_proxy.py  mongo_manager.py
services/problem-manager/: CMakeLists.txt
services/problem-manager-python/: app.py  llm_proxy.py  requirements.txt
services/problem-manager/src/: main.cpp
ui/: package-lock.json  package.json
ui/src/: App.tsx  main.tsx  types.ts
ui/src/api/: clients.ts
ui/src/components/: CodeEditor.tsx
ui/src/pages/: AdminProblemsPage.tsx  ProblemDetailPage.tsx  ProblemsPage.tsx  SubmissionPage.tsx
